# envsetup

./: .gitignore  Makefile  README.md  build_gpdb.yaml  build_gpdb5.yaml  build_gpdb6.yaml  build_postgres.yaml  main.yaml  set_windows_vars.yaml  windows.yaml
ansible/common/: bashrc.yaml  clion.yaml  dmg_devel.yaml  fly.yml  gdb.yaml  git.yaml  golang.yaml  linode.yaml  nes_devel.yaml  pivnet-cli.yaml  powerline.yaml  repos.yaml  ssh.yaml  terraform.yaml  terraform.yml  tmux.yaml  user.yaml  vim.yaml
ansible/restricted/: bashrc.yaml  repos.yaml  ssh.yaml  windows.yaml
ansible/ubuntu1804/: environment.yaml  packages.yaml
ansible/windows/: bashrc.yaml  packages.yaml  powershell.yaml  user.yaml
bashrc/: bashrc.common  bashrc.windows
clion/: clion64.vmoptions.defaults  clion64.vmoptions.x11
gpdb/: CMakeLists.txt
group_vars/: all.yaml
postgres/: CMakeLists.txt
powershell/: Microsoft.PowerShell_profile.ps1
roles/build_gpdb/defaults/: main.yaml
roles/build_gpdb/tasks/: gp_xerces.yaml  gpdb.yaml  gporca.yaml  main.yaml
roles/build_postgres/defaults/: main.yaml
roles/build_postgres/tasks/: build_postgres.yaml  main.yaml  postgres.yaml
roles/common/files/: bashrc.common  bashrc.windows  tmux.conf  vimrc
roles/common/tasks/: bashrc.yaml  bashrc_windows.yaml  git.yaml  main.yaml  packages_ubuntu1804.yaml  powerline.yaml  tmux.yaml  vim.yaml
roles/dev_tools/files/: bashrc.golang
roles/dev_tools/tasks/: clion.yaml  (+10 more)
roles/postgres_dev/: README.md
sample_inventory/: hosts.windows
sample_vars/: userconfig.yaml
ssh/: config.restricted
vim/: vimrc
(+22 files in other folders)
